<resources>
    <string name="app_name">LilTale</string>

    <string name="sigh_out">Sigh out</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_mail">Enter mail</string>
    <string name="enter_password">Enter password</string>
    <string name="user_with_this_nik_already_exist">User with this nik already exist</string>
    <string name="nik">nik</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="enter">enter</string>
    <string name="login">login</string>
    <string name="invalid_password_or_username">Invalid password or username</string>
    <string name="searching">searching...</string>
    <string name="to_record_voice">Record your voice!</string>
    <string name="hashtag">#hashtag</string>
    <string name="account">account</string>
    <string name="feed">feed</string>
    <string name="done">done</string>
    <string name="search">search</string>
    <string name="record">Record</string>
    <string name="registration">Registration</string>
    <string name="user_unauthorized">User unauthorized</string>
    <string name="record_audio">Record audio</string>
    <string name="time_is_up">Time is up</string>
    <string name="permission_denied_record">Permission denied</string>
    <string name="no_update_time">Time cannot be updated</string>
    <string name="get_time_impossible">it is impossible to get time</string>
    <string name="internet_available">Internet is not available</string>
    <string name="field_empty">Field can`t be empty</string>
    <string name="post_fail_loading">Post loading failed</string>
    <string name="post_load">Post has been created!</string>
    <string name="wait_for_the_post_to_load">Wait for the post to load</string>
    <string name="come_back_tomorrow">come back tomorrow</string>
    <string name="error_loading_icon">Error loading icon</string>
    <string name="version">β - version</string>
    <string name="warning">This is a beta version of the application. Possible bugs. When a full version of the application is released, all data may be deleted.</string>
    <string name="post_removed">Post removed</string>
    <string name="can_t_load_image">can\'t load image</string>
    <string name="delete">delete</string>
    <string name="sort">sort</string>
    <string name="popular">Popular</string>
    <string name="old">Old</string>
    <string name="_new">New</string>
    <string name="change_nik">Change nik</string>
    <string name="change_photo">Change photo</string>
    <string name="new_nik">New nik</string>
    <string name="report">report</string>
    <string name="candid_image">Candid image</string>
    <string name="spam">spam</string>
    <string name="deception">deception</string>
    <string name="prohibited_goods">prohibited goods</string>
    <string name="violence_and_hostility">violence and hostility</string>
    <string name="what_exactly_do_you_find_unacceptable_in_this_post">What exactly do you find unacceptable in this post?</string>
    <string name="complaint">Complaint</string>
    <string name="complaint_report">The complaint has been sent for consideration</string>
    <string name="valid_email">Enter valid Email address!</string>
</resources>