<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageIconPostReport"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:background="@color/white"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/account_circle_fill0_wght200_grad0_opsz24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textViewDateReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:gravity="center"
        android:text="3345"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textViewNikNameReport"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNikNameReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="10dp"
        android:text="vasya"
        app:layout_constraintBottom_toTopOf="@+id/textViewHashtagReport"
        app:layout_constraintStart_toEndOf="@+id/imageIconPostReport" />

    <TextView
        android:id="@+id/textViewHashtagReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:textColor="@color/blue_300"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageIconPostReport"
        app:layout_constraintTop_toBottomOf="@id/textViewNikNameReport"
        tools:text="#hash" />

    <ImageView
        android:id="@+id/imageViewPostReport"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.divider.MaterialDivider
        app:layout_constraintTop_toBottomOf="@+id/imageViewPostReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imageViewPostReport">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/what_exactly_do_you_find_unacceptable_in_this_post" />

        <RadioButton
            android:checked="true"
            android:id="@+id/spam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spam" />

        <RadioButton
            android:id="@+id/candid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/candid_image" />

        <RadioButton
            android:id="@+id/deception"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deception" />

        <RadioButton
            android:id="@+id/prohibited_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prohibited_goods" />

        <RadioButton
            android:id="@+id/violence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/violence_and_hostility" />
    </LinearLayout>

    <Button
        android:id="@+id/report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/report"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
